refactor(java): 优化代码使用现代Java特性
- 将 get(0) 替换为 getFirst() 以使用新的集合访问方法
- 使用文本块（Text Blocks）替代字符串拼接提高可读性
- 使用 Set.copyOf() 和 Map.copyOf() 替代 Collections.unmodifiableSet/unmodifiableMap
- 使用 List.of() 替代 Collections.unmodifiableList(Arrays.asList())
- 将 get(size()-1) 替换为 getLast() 获取列表最后一个元素
- 使用 formatted() 方法替代 String.format() 进行字符串格式化