@@ -6,7 +6,6 @@ import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -23,14 +22,14 @@ import java.util.List;
 public class ApplicationCorsProperties {
 
 
-    private static final List<String> DEFAULT_ALLOW_METHODS = Collections.unmodifiableList(
-        Arrays.asList(HttpMethod.GET.name(),
-            HttpMethod.HEAD.name(),
-            HttpMethod.POST.name(),
-            HttpMethod.OPTIONS.name(),
-            HttpMethod.PUT.name(),
-            // HttpMethod.TRACE.name(),
-            HttpMethod.DELETE.name()));
+    private static final List<String> DEFAULT_ALLOW_METHODS = List.of(
+        HttpMethod.GET.name(),
+        HttpMethod.HEAD.name(),
+        HttpMethod.POST.name(),
+        HttpMethod.OPTIONS.name(),
+        HttpMethod.PUT.name(),
+        // HttpMethod.TRACE.name(),
+        HttpMethod.DELETE.name());
 
     /**
      * 是否启用跨域，默认启用
